# PyMesh

./: .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
docker/patches/: package_dependencies.py  patch_wheel.py
python/pymesh/: __init__.py  boolean.py
scripts/: add_element_attribute.py
