[build-system]
requires = [
    "numpy>=1.10.4",
    "setuptools>=48",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64"
build-frontend = "build[uv]"
test-requires = [
    "numpy>=1.10.4",
    "scipy>=0.17.0",
]
test-command = "python -c 'import pymesh, sys; result = pymesh.test(); sys.exit(0 if result.wasSuccessful() else 1)'"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y boost-devel cmake gcc-toolset-9-gcc gcc-toolset-9-gcc-c++ gmp-devel mpfr-devel unzip zip && ln -sf /usr/bin/cmake /usr/local/bin/cmake"
environment = { CC = "/opt/rh/gcc-toolset-9/root/usr/bin/gcc", CXX = "/opt/rh/gcc-toolset-9/root/usr/bin/g++", NUM_CORES = "2" }
